# reference-file-testing-tool

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  ah_bootstrap.py  setup.cfg  setup.py
docs/: conf.py  index.rst  install.rst  usage.rst
docs/db/: index.rst
docs/reference_file_testing_tool/: index.rst
docs/reftest/: index.rst
docs/testref/: index.rst
licenses/: LICENSE.rst
reference_file_testing_tool/: __init__.py  db.py  hst_reftest.py  jwst_reftest.py  models.py  reftest.py
reference_file_testing_tool/utils/: astroquery_utils.py
reftest/: __init__.py  cli.py  db.py  log.py  reftest.py
reftest/example_subpkg/: setup_package.py
testref/example_subpkg/: setup_package.py
